--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,28 @@
+.admin {
+    margin: 15vh auto; 
+    padding: 40px;
+    width: 100%;
+    max-width: 300px; 
+    box-sizing: border-box; 
+    background-color: #b0f2f6;
+    font-family: Arial, sans-serif;
+    border: 4px solid #1e98f6;
+    border-radius: 12px; 
+    text-align: center;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+    background-color: #1e98f6;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
 div.muestra div.descripcion {
     text-align: center;
     padding: 15px;
@@ -53,7 +78,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(30, 152, 246);
+    background-color: #1e98f6;
     padding: 15px 20px;
     border-radius: 8px;
     margin-bottom: 20px;
