--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,6 +4,12 @@
     margin: 0; 
 }
 
+.h2 {
+    text-align: center;
+    margin:0, 
+    ;
+}
+
 .titulo-subtitulo {
     flex-grow: 1;  
     text-align: center;
